--- a/Backend/src/main/webapp/index.html
+++ b/Backend/src/main/webapp/index.html
@@ -13,5 +13,9 @@
         <h2>api/info/admin</h2>
         <h3>(OPTIONS: GET)</h3>
         <h3>(Access allowed with admin role)</h3><br>
+        <h2>api/info/people/<i>peopleId</i></h2>
+        <p><i><b>(PeopleId must be an integer)</b></i></p>
+        <h3>(OPTIONS: GET)</h3>
+        <h3>(Access allowed for everybody)</h3><br>
     </body>
 </html>
