backend text changed

--- a/Backend/src/main/webapp/index.html
+++ b/Backend/src/main/webapp/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Security Exercise</title>
+        <title>Backend Seed</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
         <h1>Backend with REST-Api:</h1>
-        <h2>BCrypt, CORS and Jason Web Token Demonstration</h2><br>
         <h2>api/info/user</h2>
         <h3>(OPTIONS: GET)</h3>
         <h3>(Access allowed with user role)</h3><br>
