--- a/Backend/src/main/webapp/index.html
+++ b/Backend/src/main/webapp/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Backend with REST-Api:</h1>
+        <h2>api/login</h2>
+        <h3>(OPTIONS: POST)</h3>
+        <h3>(Requires json object: {"username":XXXX,"password":XXXX})</h3><br>
         <h2>api/info/user</h2>
         <h3>(OPTIONS: GET)</h3>
         <h3>(Access allowed with user role)</h3><br>
