kom nugit add .git add .

--- a/Web Client/public/index.html
+++ b/Web Client/public/index.html
@@ -49,8 +49,8 @@
     -->
   <script>
     $(document).ready(function () {
-      $('.myPopover').popover({ content: "Only available when two different dates", placement: "right", trigger: "focus" });
-    });
+        $('[data-toggle="popover"]').popover();
+    })
   </script>
 </body>
 
