--- a/Backend/src/main/webapp/index.html
+++ b/Backend/src/main/webapp/index.html
@@ -5,7 +5,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Backend with REST-Api:</h1>
-
+        <div align="center">
+        <h1>Carmondo Car Rental API:</h1>
+        <h1>Connected to:</h1>
+        <h2>Schwertz</h2>
+        <img src="schwertz-logo.jpg" width="200" height="200" alt="schwertz-logo"/>
+        <h2>Bigler Biler</h2>
+        <img src="Bigler.png" width="200" height="200" alt="Bigler"/>
+        </div>
     </body>
 </html>
