small visual fixes

--- a/Backend/src/main/webapp/index.html
+++ b/Backend/src/main/webapp/index.html
@@ -12,6 +12,8 @@
         <img src="schwertz-logo.jpg" width="200" height="200" alt="schwertz-logo"/>
         <h2>Bigler Biler</h2>
         <img src="Bigler.png" width="200" height="200" alt="Bigler"/>
+        <h2>Rental International</h2>
+        <img src="rental-international.jpg" width="400" height="200" alt="Bigler"/>
         </div>
     </body>
 </html>
